--- a/scaladoc/resources/dotty_res/styles/scalastyle.css
+++ b/scaladoc/resources/dotty_res/styles/scalastyle.css
@@ -93,6 +93,7 @@ code {
   padding: 0 .3em;
 }
 pre {
+  overflow: visible;
   scrollbar-width: thin;
   margin: 0px;
 }
